Add updated index,html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="logo">
             <h1>My Logo</h1>
             </div>
+            <a href="#" class="bars-mob"></a>
             <div class="nav-bar">
                 <ul>
                     <li><a href="#portfolio-1">portfolio</a></li>
@@ -27,7 +28,7 @@
                 <h1>I'm Girma Glad to see you!</h1>
                 <p>I'm a software developer! I can help you build a product, feature or website look through some of my work and experience! if you like what you  see and have a project you need coded, don't hestiate to contact me</p>
                 <div class="let-s">
-                    <h1>LET'S CONNECT</h1>
+                    <h2>LET'S CONNECT</h2>
                     <div class="vector">
                         <ul>
                             <li><a href="https://github.com/girma336" class="twitter"></a></li>
@@ -43,9 +44,10 @@
     </header>
     <section class="main-part" id="portfolio-1">
         <article>
+            <div class="image-1"></div>
             <div class="back-image-file all-image-pro"></div>
             <div class="back-description">
-                <h1>Tonic</h1>
+                <h2>Tonic</h2>
                 <div>
                     <ul class="page-list">
                         <p>CANOPY</p>
@@ -66,11 +68,12 @@
                 <div class="button-m">
                     <button type="button">See Project</button>
                 </div>
-            </div>
+        </div>
         </article>
         <article>
+            <div class="image-2"></div>
             <div class="back-description two-four">
-                <h1>Multi-Post Stories</h1>
+                <h2>Multi-Post Stories</h2>
                 <ul class="page-list">
                     <p>FACEBOOK</p>
                     <li>Full Stack Dev</li>
@@ -94,9 +97,10 @@
             <div class="back-image-file-1 all-image-pro mid-end"></div>
         </article>
         <article>
+            <div class="image-3"></div>
             <div class="back-image-file-2 all-image-pro"></div>
             <div class="back-description">
-                <h1>Facebook 360</h1>
+                <h2>Facebook 360</h2>
                 <ul class="page-list">
                     <p>FACEBOOK</p>
                     <li>Full Stack Dev</li>
@@ -119,8 +123,9 @@
             </div>
         </article>
         <article>
+            <div class="image-4"></div>
             <div class="back-description two-four">
-                <h1>Uber Navigation</h1>
+                <h2>Uber Navigation</h2>
                 <ul class="page-list">
                     <p>Uber</p>
                     <li>Lead Developer</li>
@@ -201,7 +206,7 @@
     </section>
     <section class="contact-me-form" id="contact-1">
             <div class="new-contact">
-                <h1>Contact me</h1>
+                <h2>Contact me</h2>
                 <p id="new-info">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
             </div>
             <div class="contact-fo">
