Add update index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </header>
-    <section class="main-part" id="portfolio-1">
+    <section class="main-part all-page-mode" id="portfolio-1">
         <article>
             <div class="image-1"></div>
             <div class="back-image-file all-image-pro"></div>
@@ -148,13 +148,13 @@
             <div class="back-image-file-3 all-image-pro mid-end"></div>
         </article>
     </section>
-    <section class="about-me" id="about-1">
+    <section class="about-me all-page-mode" id="about-1">
         <article>
             <div class="about-me-page">
                 <h1 class="header-1">About Myself</h1>
                 <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
                 <div class="let-s">
-                    <h1>LET'S CONNECT</h1>
+                    <h2>LET'S CONNECT</h2>
                     <div class="vector">
                         <ul>
                             <li><a href="https://github.com/girma336" class="twitter"></a></li>
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <div class="button-m">
-                    <button type="button">See Project</button>
+                    <button type="button">Get my Resume</button>
                 </div>
             </div>
             <div class="lists-of-frame">
@@ -204,7 +204,7 @@
             </div>  
         </article>
     </section>
-    <section class="contact-me-form" id="contact-1">
+    <section class="contact-me-form all-page-mode" id="contact-1">
             <div class="new-contact">
                 <h2>Contact me</h2>
                 <p id="new-info">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
