--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="hole-div">
     <header>
         <div class="logo-nav">
             <div class="logo">
@@ -228,5 +229,6 @@
             </div>
             <div class="shape"></div>
     </section>
+</div>
 </body>
 </html>
