--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     </header>
     <section class="main-part all-page-mode" id="portfolio-1">
         <article>
-            <div class="image-1"></div>
-            <div class="back-image-file all-image-pro"></div>
+            <div class="image-1 scale-image"></div>
+            <div class="back-image-file all-image-pro scale-image"></div>
             <div class="back-description">
                 <h2>Tonic</h2>
                 <div>
                     <ul class="page-list">
-                        <p>CANOPY</p>
+                        <li>CANOPY</li>
                         <li>Back End developer</li>
                         <li>2015</li>
                     </ul>
@@ -72,11 +72,11 @@
         </div>
         </article>
         <article>
-            <div class="image-2"></div>
+            <div class="image-2 scale-image"></div>
             <div class="back-description two-four">
                 <h2>Multi-Post Stories</h2>
                 <ul class="page-list">
-                    <p>FACEBOOK</p>
+                    <li>FACEBOOK</li> 
                     <li>Full Stack Dev</li>
                     <li>2015</li>
                 </ul>
@@ -95,15 +95,15 @@
                     <button type="button">See Project</button>
                 </div>
             </div>
-            <div class="back-image-file-1 all-image-pro mid-end"></div>
+            <div class="back-image-file-1 all-image-pro mid-end scale-image"></div>
         </article>
         <article>
-            <div class="image-3"></div>
-            <div class="back-image-file-2 all-image-pro"></div>
+            <div class="image-3 scale-image"></div>
+            <div class="back-image-file-2 all-image-pro scale-image"></div>
             <div class="back-description">
                 <h2>Facebook 360</h2>
                 <ul class="page-list">
-                    <p>FACEBOOK</p>
+                    <li>FACEBOOK</li>
                     <li>Full Stack Dev</li>
                     <li>2015</li>
                 </ul>
@@ -124,11 +124,11 @@
             </div>
         </article>
         <article>
-            <div class="image-4"></div>
+            <div class="image-4 scale-image"></div>
             <div class="back-description two-four">
                 <h2>Uber Navigation</h2>
                 <ul class="page-list">
-                    <p>Uber</p>
+                    <li>Uber</li>
                     <li>Lead Developer</li>
                     <li>2018</li>
                 </ul>
@@ -146,7 +146,7 @@
                     <button type="button">See Project</button>
                 </div>
             </div>
-            <div class="back-image-file-3 all-image-pro mid-end"></div>
+            <div class="back-image-file-3 all-image-pro mid-end scale-image"></div>
         </article>
     </section>
     <section class="about-me all-page-mode" id="about-1">
