Add corection it last

--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
             <div class="logo">
             <h1>My Logo</h1>
             </div>
-            <img src="icon-bar.svg" class="bars-mob" id="menu-bar" alt="">
+            <img src="images/icon-bar.svg" class="bars-mob" id="menu-bar" alt="">
             <!-- <a href="#" class="bars-mob" id="menu-bar"></a> -->
             <nav>
                 <img class="bar-new" id="close-menu" src="images/close-menu.svg" alt="">
-              <div class="nav-bar bar-new">
-               
+                <div class="nav-bar bar-new">
                 <ul class="nav-main">
                     <li><a id="portifolio-2" href="#portfolio-1">Portfolio</a></li>
                     <li><a id="about-2" href="#about-1">About</a></li>
