Add fix stylesheet error

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <section class="section-d section-phone">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ipsum corrupti ut saepe! Repellat, officiis! Ex nostrum quis fugiat commodi odio? Dignissimos eos saepe voluptatem unde dolorem ut molestiae repudiandae.</p>
         </section>
-            <section class="section-e section-phone">
+            <!-- <section class="section-e section-phone">
                 <div class="nav-pop">
                     <ul>
                         <li>html</li>
@@ -207,7 +207,7 @@
                         <li>css</li>
                     </ul>
                 </div>
-            </section>
+            </section> -->
             <section class="section-f">
                 <button><p>See Live</p><img src="imagsPop/see-live-icon.svg" alt=""></button>
                 <button><p>See Source</p><img src="images/Vector.svg" alt=""></button>
