Add updated index.html file

--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
                 </ul>
             </div>
         </section>
-        <section class="section-c">
+        <!-- <section class="section-c">
             <div class="image-1 scale-image"></div>
            <img class="desck-top" src="imagsPop/Snapshoot Portfolio(3).png" alt="">
         </section>
         <section class="section-d section-phone">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ipsum corrupti ut saepe! Repellat, officiis! Ex nostrum quis fugiat commodi odio? Dignissimos eos saepe voluptatem unde dolorem ut molestiae repudiandae.</p>
         </section>
-            <!-- <section class="section-e section-phone">
+            <section class="section-e section-phone">
                 <div class="nav-pop">
                     <ul>
                         <li>html</li>
@@ -207,11 +207,11 @@
                         <li>css</li>
                     </ul>
                 </div>
-            </section> -->
+            </section>
             <section class="section-f">
                 <button><p>See Live</p><img src="imagsPop/see-live-icon.svg" alt=""></button>
                 <button><p>See Source</p><img src="images/Vector.svg" alt=""></button>
-            </section>
+            </section> -->
         </div>
         
     </div>
