Add updated index.html for validate email

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <p id="new-info">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it </p>
             </div>
             <div class="contact-fo">
-                <form action="https://formspree.io/f/xrgdkrew" method="POST">
+                <form class="form-class" action="https://formspree.io/f/xrgdkrew" method="POST">
                     <ul>
                         <li>
                           <input type="text" id="name" name="user_name" placeholder="girma arekegn" maxlength="30" required/>
@@ -290,7 +290,8 @@
                           <textarea id="msg" name="user_message" maxlength="500" placeholder="Write your message here"></textarea>
                         </li>
                         <li>
-                            <button type="submit">Get It Touch"</button>
+                            <p class="if-false"></p>
+                            <button id="submited" type="submit">Get It Touch</button>
                         </li>
                 </form>
             </div>
